<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radioGroupFiltersTaskDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioBtnAllFiltersTaskDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filters_task_dialog_all_radiobtn" />

        <RadioButton
            android:id="@+id/radioBtnPendingFiltersTaskDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filters_task_dialog_pending_radiobtn" />

        <RadioButton
            android:id="@+id/radioBtnCompletedFiltersTaskDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filters_task_dialog_completed_radiobtn" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>