<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.detail.TaskDetailFragment">

    <EditText
        android:id="@+id/editTitleTaskDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/task_detail_title_hint"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDescriptionTaskDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/task_detail_description_hint"
        android:inputType="textMultiLine"
        android:maxLines="4"
        app:layout_constraintEnd_toEndOf="@+id/editTitleTaskDetail"
        app:layout_constraintStart_toStartOf="@+id/editTitleTaskDetail"
        app:layout_constraintTop_toBottomOf="@+id/editTitleTaskDetail" />

    <EditText
        android:id="@+id/editDateTaskDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/task_detail_date_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/editDescriptionTaskDetail"
        app:layout_constraintStart_toStartOf="@+id/editDescriptionTaskDetail"
        app:layout_constraintTop_toBottomOf="@+id/editDescriptionTaskDetail" />

    <Spinner
        android:id="@+id/spinnerStateTaskDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/edit_text"
        app:layout_constraintEnd_toEndOf="@+id/editDateTaskDetail"
        app:layout_constraintStart_toStartOf="@+id/editDateTaskDetail"
        app:layout_constraintTop_toBottomOf="@+id/editDateTaskDetail" />

    <Button
        android:id="@+id/btnSaveTaskDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/task_detail_save_button"
        app:layout_constraintEnd_toEndOf="@+id/spinnerStateTaskDetail"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStateTaskDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>